#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([ups-csa-2018/review-cpp], [no-version])

AM_INIT_AUTOMAKE([foreign])

AC_OUTPUT(Makefile)

AC_CONFIG_SRCDIR([exercices.cpp])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
